Nivel de Inocencia

--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -713,7 +713,7 @@ document.addEventListener('keydown', e => {
       <div class="thermo-arrow"></div>
     </div>
   </div>
-  <p id="thermo-label">Nível de Inocência</p>
+  <p id="thermo-label">Nivel de Inocencia</p>
 </div>
 
 <script>
