--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -408,7 +408,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       Tu navegador no soporta audio.
     </audio>
 
-    <button id="startBtn" onclick="startQuiz()" style="display: none;">ASSUMIR OS RISCOS</button>
+    <button id="startBtn" onclick="startQuiz()" style="display: none;">ASUMIR LOS RIESGOS</button>
 
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
@@ -446,7 +446,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
 },
 {
   text: "Demuestra que lo sabes...",
-  options: ["Miedo a perder", "Ira", "Recompensa"],
+  options: ["Miedo a perder", "Negociación", "Recompensa"],
   correct: 2,
   audio: "https://static.wixstatic.com/mp3/7f5efc_cf00803275fe4b8496b2a79d21f4876c.mp3",   // 🎧 Audio 5
   gif: "https://static.wixstatic.com/media/7f5efc_356fcdf2e88344ea95e2f7d8e218c018~mv2.gif"
