--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -608,7 +608,7 @@ title: (() => {
 })(),
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
   buttons: [
-    { text: "GARANTIR AGORA!", action: "link", link: "https://sun.eduzz.com/E0D6P4V691" }
+    { text: "GARANTIR AGORA!", action: "link", link: "/lp-2/" }
   ]
 }
   
