--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -4,24 +4,24 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>O Código da [P]ersuasão</title>
-  <link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
-  <script src="https://cdn.tailwindcss.com"></script>
+<title>El Código de la [P]ersuasión</title>
+<link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
+<script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Favicon -->
+<!-- Favicon -->
 <link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
 
-<!-- Open Graph para redes sociais -->
-<meta property="og:title" content="O Código da [P]ersuasão" />
-<meta property="og:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
+<!-- Open Graph para redes sociales -->
+<meta property="og:title" content="El Código de la [P]ersuasión" />
+<meta property="og:description" content="Descubre los gatillos mentales ocultos y técnicas de persuasión prohibidas." />
 <meta property="og:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://bigoffer.netlify.app/lp-1/" />
 
-<!-- Para WhatsApp e Twitter -->
+<!-- Para WhatsApp y Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="O Código da [P]ersuasão" />
-<meta name="twitter:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
+<meta name="twitter:title" content="El Código de la [P]ersuasión" />
+<meta name="twitter:description" content="Descubre los gatillos mentales ocultos y técnicas de persuasión prohibidas." />
 <meta name="twitter:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 
   <style>
