--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -306,11 +306,11 @@ body {
   })(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
   fbq('init', '839138854780074'); // ✅ seu pixel
-  fbq('track', 'PageView');
+  fbq('track', 'ViewContent');
 </script>
 <noscript>
   <img height="1" width="1" style="display:none"
-       src="https://www.facebook.com/tr?id=839138854780074&ev=PageView&noscript=1"/>
+       src="https://www.facebook.com/tr?id=839138854780074&ev=ViewContent&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
 
