--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -612,7 +612,7 @@ title: (() => {
 })(),
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
   buttons: [
-    { text: "¡ASEGURAR AHORA!", action: "link", link: "https://pay.hotmart.com/C102252201D?checkoutMode=10" }
+    { text: "¡ASEGURAR AHORA!", action: "link", link: "/lp-2-es/" } 
   ]
 }
   
