--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -355,9 +355,8 @@
 
   <!-- Imagem  -->
   <div class="flex justify-center relative -mt-36 z-20">
-    <img src="https://i.imgur.com/AQVxso7.png" 
-         alt="Capa Código da Persuasão" 
-         class="w-[360px] sm:w-[460px] h-auto object-contain drop-shadow-[0_0_45px_rgba(0,0,0,0.9)]">
+    <img src="https://i.imgur.com/eLB6tfA.png" 
+        class="w-[360px] sm:w-[460px] h-auto object-contain drop-shadow-[0_0_45px_rgba(0,0,0,0.9)]">
   </div>
 
   <!-- Conteúdo do card -->
@@ -411,7 +410,7 @@
     </div><br>
 
     <!-- Botão CTA -->
-    <a href="https://sun.eduzz.com/E0D6P4V691"
+    <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
        class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
     DESBLOQUEAR EL CÓDIGO
     </a>
@@ -555,7 +554,7 @@
 <br>
  <p class="text-gray-300 mb-8"><b>¡CUIDADO!</b> ¡No uses estas técnicas para el mal! 
   </p>
-  <a href="https://sun.eduzz.com/E0D6P4V691" 
+  <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10" 
      class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
      ✅ QUIERO ACCEDER AHORA
   </a>
