--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -435,7 +435,7 @@
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Manipuladores que garantiram o Código da [P]ersuasão:
+    Manipuladores que adquirieron el Código de la [P]ersuación:
   </h2>
 
   <div class="slider-container relative w-full overflow-hidden">
