--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -365,6 +365,32 @@ body {
   color: #ddd;
   margin-bottom: 20px;
 }
+
+
+#volumeHint {
+  position: absolute;
+  bottom: -22px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  color: rgba(255,255,255,0.8);
+  font-weight: 400;
+  text-shadow: 0 0 6px rgba(255,255,255,0.4);
+  opacity: 0;
+  animation: blink 1s ease-in-out infinite, fadeOut 5s ease forwards;
+  pointer-events: none;
+}
+
+@keyframes blink {
+  0%, 100% { opacity: 0.2; }
+  50% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+  0% { opacity: 1; }
+  90% { opacity: 0.9; }
+  100% { opacity: 0; visibility: hidden; }
+}
 </style>
 
 <script>
@@ -401,6 +427,12 @@ document.getElementById("beginPortal").addEventListener("click", () => {
     <div class="gif-container" id="gifTop" onclick="unmuteIntro()">
       <img src="https://static.wixstatic.com/media/7f5efc_43c1c40f773b406dbfcbd0332c43715c~mv2.gif" alt="Oráculo">
     </div>
+
+    <div class="gif-container" id="gifTop" onclick="unmuteIntro()">
+  <img src="https://static.wixstatic.com/media/7f5efc_43c1c40f773b406dbfcbd0332c43715c~mv2.gif" alt="Oráculo">
+  <div id="volumeHint">♫ Aumente o Volume</div>
+</div>
+
     <audio id="introAudio" autoplay muted onended="showStartButton()">
       <source src="https://static.wixstatic.com/mp3/7f5efc_9c72927ebd644091a41f85b97a93198b.mp3" type="audio/mpeg">
       Seu navegador não suporta áudio.
