--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -366,18 +366,17 @@ body {
   margin-bottom: 20px;
 }
 
-
 #volumeHint {
   position: absolute;
   bottom: -22px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 12px;
-  color: rgba(255,255,255,0.8);
-  font-weight: 400;
-  text-shadow: 0 0 6px rgba(255,255,255,0.4);
+  font-size: 13px;
+  color: #ffffff; /* branco puro */
+  font-weight: 500;
+  text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
   opacity: 0;
-  animation: blink 1s ease-in-out infinite, fadeOut 5s ease forwards;
+  animation: blink 1.2s ease-in-out infinite, fadeOut 5s ease forwards;
   pointer-events: none;
 }
 
@@ -391,6 +390,7 @@ body {
   90% { opacity: 0.9; }
   100% { opacity: 0; visibility: hidden; }
 }
+
 </style>
 
 <script>
