--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -50,12 +50,12 @@ body {
       min-height: 100vh;
     }
  
-    .gif-container {
+.gif-container {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: visible !important; /* permite o texto sair da área da imagem */
 }
 
 .gif-container::after {
@@ -86,18 +86,18 @@ body {
 
 
 
-/* 🔊 Texto "Aumente o Volume" */
+/* Texto piscante */
 #volumeHint {
   position: absolute;
-  bottom: -28px;
+  bottom: -25px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px;
-  color: #ffffff;
+  color: #fff;
   font-weight: 500;
   text-shadow: 0 0 8px rgba(255,255,255,0.8);
   opacity: 0;
-  z-index: 3; /* texto acima de tudo */
+  z-index: 3;
   animation: blink 1.2s ease-in-out infinite, fadeOut 5s ease forwards;
   pointer-events: none;
 }
@@ -112,7 +112,6 @@ body {
   90% { opacity: 0.9; }
   100% { opacity: 0; visibility: hidden; }
 }
-
 
 
 
@@ -430,8 +429,10 @@ document.getElementById("beginPortal").addEventListener("click", () => {
     </div>
 
 <div class="gif-container" id="gifTop" onclick="unmuteIntro()">
-  <img src="https://static.wixstatic.com/media/7f5efc_43c1c40f773b406dbfcbd0332c43715c~mv2.gif" alt="Oráculo">
-  <div id="volumeHint">♫ Aumente o Volume</div>
+  <div class="gif-wrapper">
+    <img src="https://static.wixstatic.com/media/7f5efc_43c1c40f773b406dbfcbd0332c43715c~mv2.gif" alt="Oráculo">
+    <div id="volumeHint">♫ Aumente o Volume</div>
+  </div>
 </div>
 
      <audio id="introAudio" autoplay muted onended="showStartButton()">
