--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -89,16 +89,17 @@ body {
 /* Texto piscante */
 #volumeHint {
   position: absolute;
-  bottom: -25px;
+  bottom: 8px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* fonte mais fina e moderna */
   color: #fff;
   font-weight: 500;
   text-shadow: 0 0 8px rgba(255,255,255,0.8);
   opacity: 0;
   z-index: 3;
-  animation: blink 1.2s ease-in-out infinite, fadeOut 5s ease forwards;
+  animation: blink 1.2s ease-in-out infinite, fadeOut 7s ease forwards;
   pointer-events: none;
 }
 
