--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -431,7 +431,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
 <div class="gif-container" id="gifTop" onclick="unmuteIntro()">
   <div class="gif-wrapper">
     <img src="https://static.wixstatic.com/media/7f5efc_43c1c40f773b406dbfcbd0332c43715c~mv2.gif" alt="Oráculo">
-    <div id="volumeHint">🔊 Aumente o Volume</div>
+    <div id="volumeHint">🔊 Sube el volumen</div>
   </div>
 </div>
     <audio id="introAudio" autoplay muted onended="showStartButton()"> <!-- 🎧 Áudio 1 - IMPORTANTE! -->
