--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -55,6 +55,7 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
+  margin-top: -15px; /* 🔥 sobe o conjunto todo (GIF + vinheta + texto) */
   align-items: center;
   overflow: visible !important; /* permite o texto sair da área da imagem */
 }
@@ -79,7 +80,6 @@ body {
   max-width: 300px;
   display: block;
   margin: 0 auto;
-  margin-top: -15px; /* sobe levemente o GIF */
   cursor: pointer;
   position: relative;
   z-index: 1;
