--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -53,6 +53,7 @@ body {
 .gif-container {
   position: relative;
   display: flex;
+  margin-top: -15px; /* 🔥 sobe o conjunto todo (GIF + vinheta + texto) */
   justify-content: center;
   align-items: center;
   overflow: visible !important; /* permite o texto sair da área da imagem */
@@ -78,7 +79,7 @@ body {
   max-width: 300px;
   display: block;
   margin: 0 auto;
-  margin-top: -15px; /* sobe levemente o GIF */
+  
   cursor: pointer;
   position: relative;
   z-index: 1;
